<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/billTotWithTaxLabel"
        android:layout_width="177dp"
        android:layout_height="29dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/bill_total_with_tax"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tipPercentLabel"
        android:layout_width="175dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/tip_percent"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/billTotWithTaxLabel" />

    <TextView
        android:id="@+id/tipAmountLabel"
        android:layout_width="174dp"
        android:layout_height="34dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="92dp"
        android:text="@string/tip_amount"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tipPercentLabel" />

    <TextView
        android:id="@+id/totalWithTip"
        android:layout_width="174dp"
        android:layout_height="31dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/total_with_tip"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tipAmountLabel" />

    <TextView
        android:id="@+id/numOfPeopleLabel"
        android:layout_width="174dp"
        android:layout_height="31dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/number_of_people"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/totalWithTip" />

    <TextView
        android:id="@+id/totalPerPerson"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/total_per_person"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/numOfPeopleLabel" />

    <TextView
        android:id="@+id/overage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/overage"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/totalPerPerson" />

    <EditText
        android:id="@+id/billTotal"
        android:layout_width="145dp"
        android:layout_height="48dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:background="#DDBADFBB"
        android:ems="10"
        android:inputType="numberDecimal"
        android:textAlignment="textEnd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/billTotWithTaxLabel"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck"/>

    <EditText
        android:id="@+id/numOfPplTxt"
        android:layout_width="90dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:background="#DDBADFBB"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintStart_toEndOf="@+id/numOfPeopleLabel"
        app:layout_constraintTop_toBottomOf="@+id/totalWithTip"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/goBtn"
        android:layout_width="80dp"
        android:layout_height="55dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="32dp"
        android:onClick="getValue"
        android:text="@string/goBtn"
        app:layout_constraintStart_toEndOf="@+id/numOfPplTxt"
        app:layout_constraintTop_toBottomOf="@+id/totalWithTip" />

    <TextView
        android:id="@+id/totAmtPerPersonTxt"
        android:layout_width="183dp"
        android:layout_height="33dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="#61B8B3B3"
        android:textAlignment="textEnd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.85"
        app:layout_constraintStart_toEndOf="@+id/totalPerPerson"
        app:layout_constraintTop_toBottomOf="@+id/numOfPplTxt" />

    <Button
        android:id="@+id/clearBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:onClick="clearAllFields"
        android:text="@string/clear"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/overage" />

    <TextView
        android:id="@+id/overageTxt"
        android:layout_width="183dp"
        android:layout_height="33dp"
        android:layout_marginStart="108dp"
        android:layout_marginTop="24dp"
        android:background="#61B8B3B3"
        app:layout_constraintStart_toEndOf="@+id/overage"
        app:layout_constraintTop_toBottomOf="@+id/totAmtPerPersonTxt" />

    <TextView
        android:id="@+id/totWithTipTxt"
        android:layout_width="141dp"
        android:layout_height="40dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="196dp"
        android:background="#61B8B3B3"
        app:layout_constraintStart_toEndOf="@+id/totalWithTip"
        app:layout_constraintTop_toBottomOf="@+id/billTotal" />

    <TextView
        android:id="@+id/tipAmtTxt"
        android:layout_width="140dp"
        android:layout_height="43dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="132dp"
        android:background="#61B8B3B3"
        app:layout_constraintStart_toEndOf="@+id/tipAmountLabel"
        app:layout_constraintTop_toBottomOf="@+id/billTotal" />

</androidx.constraintlayout.widget.ConstraintLayout>